# feed

./: .gitignore  .pullapprove.yml  .rustfmt.toml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Changelog.md  README.md  coverage
rsc/: example2.xml  sample_rss.xml
src/: channel.rs  feed.rs  feed_builder.rs  item.rs  lib.rs  lib.rs.bk  rss.rs  rss_feed.rs
src/atom/: category.rs  category_builder.rs  entry.rs  entry_builder.rs  feed.rs  feed_builder.rs  generator.rs  generator_builder.rs  link.rs  link_builder.rs  mod.rs  person.rs  person_builder.rs  text.rs  text_builder.rs
src/channel/: category_builder.rs  category_getters.rs  channel_builder.rs  channel_from_url.rs  channel_getters.rs  channel_validate.rs  cloud_builder.rs  cloud_getters.rs  enclosure_builder.rs  enclosure_getters.rs  guid_builder.rs  guid_getters.rs  image_builder.rs  image_getters.rs  item_builder.rs  item_getters.rs  mod.rs  source_builder.rs  source_getters.rs  text_input_builder.rs  text_input_getters.rs
src/channels/: category.rs  category_builder.rs  category_getters.rs  channel.rs  channel_builder.rs  channel_from_url.rs  channel_getters.rs  channel_validate.rs  cloud.rs  cloud_builder.rs  cloud_getters.rs  enclosure.rs  enclosure_builder.rs  enclosure_getters.rs  guid.rs  guid_builder.rs  guid_getters.rs  image.rs  image_builder.rs  image_getters.rs  item.rs  item_builder.rs  item_getters.rs  mod.rs  source.rs  source_builder.rs  source_getters.rs  text_input.rs  text_input_builder.rs  text_input_getters.rs
src/enums/: mod.rs
src/errors/: mod.rs  mod.rs.bk
src/extension/: mod.rs
src/feedio/: channel_reader.rs  feed_reader.rs  feed_reader.rs.bk  feed_writer.rs  json.rs  json.rs.bk  mod.rs  util.rs  xml.rs  xml.rs.bk
src/feedreader/: mod.rs
src/media/: mod.rs
src/rss/: category.rs  category.rs.bk  category_builder.rs  channel.rs  channel.rs.bk  channel_builder.rs  channel_builder.rs.bk  cloud.rs  cloud.rs.bk  cloud_builder.rs  enclosure.rs  guid.rs  image.rs  (+10 more)
tests/: lib.rs
(+37 files in other folders)
