[package]
name          = "feed"
version       = "2.0.1"
authors       = ["Chris Palmer <pennstate5013@gmail.com>"]
license       = "LGPL-3.0"
homepage      = "http://red-oxide.org"
repository    = "https://github.com/red-oxide/feed"
documentation = "https://docs.rs/feed/"
description   = "Library for creating channels feeds and parsing channels feeds from an URL and retrieving the elements"
keywords      = ["rss", "feed"]
readme        = "README.md"


[badges]
travis-ci = { repository = "red-oxide/feed" }


[dependencies]
clippy = {version = "0.0", optional = true}
chrono = "0.2"
curl   = "0.4"
mime   = "0.2"
rss    = "0.4"
url    = "1.2"


[features]
default  = []
unstable = []
